<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual Joypad</string>
    
    <string name="hello_world">Hello world!</string>
    
    <string name="github_link">Github: <a href="https://github.com/Knight-of-night/VirtualJoypad">https://github.com/Knight-of-night/VirtualJoypad</a></string>
    
    <string name="action_settings">Settings</string>
    <string name="label_ip_text">ip: </string>
    <string name="label_port_text">port: </string>
    <string name="label_sensitivity_text">sensitivity(ms): </string>
    <string name="default_port">30001</string>
    <string name="default_sensitivity">50</string>
    <string name="radiobutton1_text">xbox</string>
    <string name="radiobutton2_text">ps4</string>
    <string name="button1_text">connect</string>
    <string name="button2_text">button2</string>
    <string name="title_activity_xbox">XBoxActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_ps4">PS4Activity</string>
    
    <string name="xbox_dpad_left">↖</string>
    <string name="xbox_dpad_right">↘</string>
    <string name="xbox_dpad_up">↗</string>
    <string name="xbox_dpad_down">↙</string>
    <string name="xbox_button_a">A</string>
    <string name="xbox_button_b">B</string>
    <string name="xbox_button_x">X</string>
    <string name="xbox_button_y">Y</string>
    <string name="xbox_left_button">LB</string>
    <string name="xbox_right_button">RB</string>
    <string name="xbox_left_thumb">L</string>
    <string name="xbox_right_thumb">R</string>
    <string name="xbox_guide">*</string>
    <string name="xbox_start">Start</string>
    <string name="xbox_back">Back</string>

</resources>
